<resources>
    <string name="app_name">Mesimah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_prompt">Enter a task name</string>
    <string name="btn_save">Save Task</string>
    <string name="hint_desc">Save Task</string>
    <string name="checkbox_text">Done?</string>
    <string name="btn_select_date">Select Date</string>
    <string name="delete_dialog_header">Confirm Delete</string>
    <string name="delete_dialog_body">Are you sure you want to delete?</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
</resources>