<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    app:cardElevation="10dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logout_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/delete_dialog_header"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delete_dialog_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:text="@string/delete_dialog_body"
            android:textColor="#526082"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/logout_confirm"
            app:layout_constraintStart_toStartOf="@+id/logout_confirm"
            app:layout_constraintTop_toBottomOf="@+id/logout_confirm" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_dialog_body">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="8dp"
                android:text="@string/btn_cancel"
                android:textColor="#145015"
                android:textSize="12sp"
                app:strokeColor="#145015"
                app:strokeWidth="2dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#145015"
                android:padding="8dp"
                android:text="@string/btn_confirm"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>